Fix spacing around images

--- a/static/src/stylesheets/module/facia-cards/_items.scss
+++ b/static/src/stylesheets/module/facia-cards/_items.scss
@@ -60,7 +60,8 @@
         @include fc-item--list-media(3.5, 2);
 
         .fc-item__media-wrapper {
-            margin: $gs-baseline / 3;
+            margin-top: $gs-baseline / 3;
+            margin-bottom: $gs-baseline / 3;
             padding-left: $gs-baseline / 3;
         }
     }
